# stog-data

./: .gitignore  README.md  pyproject.toml  scrapy.cfg
app/: settings.py
app/spiders/: kodex.py
