[tool.poetry]
name = "stog-data"
version = "0.1.0"
description = "Korea ETF database"
authors = ["Thomas Sungjin Kang <ujuc@ujuc.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
scrapy = "^2.2.1"

[tool.poetry.dev-dependencies]
black = "19.10b0"
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 80
target-version = ['py38']
